# IMX500-server

./: .gitignore  README.md
camera/: camera.txt  start_camera.sh
cpp/: CMakeLists.txt  makefile  mqtt_alert  mqtt_console_subscriber.cpp  mqtt_sub  rtsp_server.cpp
cpp/include/: config.hpp  detector.hpp  mqtt_utils.hpp
cpp/src/bluetooth/: receive  receive.cpp
cpp/src/control/: alert_daemon.cpp  control_dev.cpp  control_devices.cpp
cpp/src/control/driver/: alert_trigger.ko  lcd_notify.ko  wav_notify.ko
cpp/src/detect/: license_detector.cpp  parking_detector.cpp  person_detector.cpp  speed_detector  speed_detector.cpp  speed_detector_daemon.cpp
cpp/src/mqtt/: mqtt_alert.cpp  mqtt_alert_s.cpp  mqtt_test.cpp
cpp/src/opencv/: CMakeLists.txt  filter.cpp  filter.hpp  pybinding.cpp
cpp/src/stream/: mediamtx.yml  rtsp  rtsp_ffmpeg  rtsp_ffmpeg.cpp  rtsp_ffmpeg_multi  rtsp_ffmpeg_multi.cpp  rtsp_server  rtsp_server.cpp  rtsp_streamer  rtsp_test  rtsp_test.cpp
cpp/src/upload/: camera_status  camera_status.cpp  read_plate_and_upload.cpp  read_plate_shm  upload_illegal_parking.cpp  upload_illegal_speed.cpp  upload_person_detection.cpp
python/: 1.py  camera_shm_writer2.py  jpeg_to_jpg.py  opencv_try.py  plzjpg.py  raw_to_jpg.py  shm_frame_0  shm_snapshot_0_0_20250716_164514  shm_snapshot_0_0_20250717_133124  shm_snapshot_311_0_20250716_154124  snapshot.py  start_camera.sh  try.py  try.txt  try2.py  try3.py  try4.py  try5.py
